// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`publish > should write the correct disruptions data to dynamoDB 1`] = `
{
  "Consequences": {
    "Consequence": [
      {
        "Advice": {
          "Details": "Some consequence description",
        },
        "Affects": {
          "Networks": {
            "AffectedNetwork": {
              "AllLines": "",
              "VehicleMode": "tram",
            },
          },
        },
        "Blocking": {
          "JourneyPlanner": false,
        },
        "Condition": "unknown",
        "Severity": "slight",
      },
    ],
  },
  "CreationTime": "2023-03-03T00:00:00.000Z",
  "Description": "Test description",
  "EnvironmentReason": "grassFire",
  "InfoLinks": {
    "InfoLink": [
      {
        "Uri": "https://example.com",
      },
    ],
  },
  "ParticipantRef": "DepartmentForTransport",
  "Planned": true,
  "Progress": "open",
  "PublicationWindow": {
    "StartTime": "2023-03-10T12:00:00.000Z",
  },
  "ReasonType": "EnvironmentReason",
  "SituationNumber": "id",
  "Source": {
    "SourceType": "feed",
    "TimeOfCommunication": "2023-03-03T00:00:00.000Z",
  },
  "Summary": "Some summary",
  "ValidityPeriod": [],
}
`;

exports[`publish > should write the correct disruptions data to dynamoDB 2`] = `
{
  "Consequences": {
    "Consequence": [
      {
        "Advice": {
          "Details": "Some consequence description",
        },
        "Affects": {
          "Networks": {
            "AffectedNetwork": {
              "AllLines": "",
              "VehicleMode": "bus",
            },
          },
          "Operators": {
            "AffectedOperator": {
              "OperatorRef": "FSYO",
            },
          },
        },
        "Blocking": {
          "JourneyPlanner": true,
        },
        "Condition": "unknown",
        "Delays": {
          "Delay": "PT40M",
        },
        "Severity": "severe",
      },
    ],
  },
  "CreationTime": "2023-03-03T00:00:00.000Z",
  "Description": "Test description",
  "EnvironmentReason": "grassFire",
  "InfoLinks": {
    "InfoLink": [
      {
        "Uri": "https://example.com",
      },
    ],
  },
  "ParticipantRef": "DepartmentForTransport",
  "Planned": true,
  "Progress": "open",
  "PublicationWindow": {
    "StartTime": "2023-03-10T12:00:00.000Z",
  },
  "ReasonType": "EnvironmentReason",
  "SituationNumber": "id",
  "Source": {
    "SourceType": "feed",
    "TimeOfCommunication": "2023-03-03T00:00:00.000Z",
  },
  "Summary": "Some summary",
  "ValidityPeriod": [],
}
`;

exports[`publish > should write the correct disruptions data to dynamoDB 3`] = `
{
  "Consequences": {
    "Consequence": [
      {
        "Advice": {
          "Details": "Some consequence description",
        },
        "Affects": {
          "Networks": {
            "AffectedNetwork": {
              "AllLines": "",
              "VehicleMode": "tram",
            },
          },
        },
        "Blocking": {
          "JourneyPlanner": false,
        },
        "Condition": "unknown",
        "Severity": "slight",
      },
    ],
  },
  "CreationTime": "2023-03-03T00:00:00.000Z",
  "Description": "Test description",
  "ParticipantRef": "DepartmentForTransport",
  "PersonnelReason": "staffInWrongPlace",
  "Planned": true,
  "Progress": "open",
  "PublicationWindow": {
    "StartTime": "2023-03-10T12:00:00.000Z",
  },
  "ReasonType": "PersonnelReason",
  "SituationNumber": "id",
  "Source": {
    "SourceType": "feed",
    "TimeOfCommunication": "2023-03-03T00:00:00.000Z",
  },
  "Summary": "Some summary",
  "ValidityPeriod": [
    {
      "EndTime": "2023-03-17T17:00:00.000Z",
      "StartTime": "2023-03-10T12:00:00.000Z",
    },
  ],
}
`;
